--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Helo <span>World</span>
+    <h1>Hello <span>World</span>
     </h1>
 </body>
 </html>
